--- a/Device Interface Manager/MVVM/View/HomeUSBView.xaml
+++ b/Device Interface Manager/MVVM/View/HomeUSBView.xaml
@@ -289,10 +289,10 @@
                                 <DataTemplate>
                                     <ComboBox
                                         ItemsSource="{Binding DataContext.Profiles, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:HomeUSBView}}}"
-                                        SelectedValuePath="Id"
+                                        SelectedValuePath="Name"
                                         Cursor="Hand"
                                         Foreground="White"
-                                        SelectedValue="{Binding Profile.Id}"
+                                        SelectedValue="{Binding Profile.Name}"
                                         SelectedItem="{Binding Profile, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
 
                                         <ComboBox.ItemTemplate>
