--- a/Device Interface Manager/MVVM/View/HomeUSBView.xaml
+++ b/Device Interface Manager/MVVM/View/HomeUSBView.xaml
@@ -289,17 +289,10 @@
                                 <DataTemplate>
                                     <ComboBox
                                         ItemsSource="{Binding DataContext.Profiles, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:HomeUSBView}}}"
-                                        SelectedValuePath="Name"
                                         Cursor="Hand"
                                         Foreground="White"
-                                        SelectedValue="{Binding Profile.Name}"
-                                        SelectedItem="{Binding Profile, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
+                                        SelectedItem="{Binding SelectedProfile, UpdateSourceTrigger=PropertyChanged}">
 
-                                        <ComboBox.ItemTemplate>
-                                            <DataTemplate>
-                                                <TextBlock Text="{Binding Name}"/>
-                                            </DataTemplate>
-                                        </ComboBox.ItemTemplate>
                                         <ComboBox.ItemContainerStyle>
                                             <Style TargetType="ComboBoxItem">
                                                 <Setter Property="Background" Value="#121212"/>
