--- a/Device Interface Manager/MVVM/View/MainWindow.xaml
+++ b/Device Interface Manager/MVVM/View/MainWindow.xaml
@@ -4,7 +4,6 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:viewModel="clr-namespace:Device_Interface_Manager.MVVM.ViewModel"
-    xmlns:cnvs="clr-namespace:Device_Interface_Manager.Core"
     xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
     x:Class="Device_Interface_Manager.MVVM.View.MainWindow"
     mc:Ignorable="d"
@@ -313,7 +312,7 @@
                 Grid.Row="1"
                 Grid.Column="1"
                 IsTabStop="False"
-                Content="{Binding CurrentView, Converter={x:Static cnvs:ObjectToUIElementConverter.Default}}"/>
+                Content="{Binding CurrentView}"/>
 
             <Button
                 Content="{Binding TotalControllers, NotifyOnTargetUpdated=True}"
