--- a/Device Interface Manager/MVVM/View/SettingsView.xaml
+++ b/Device Interface Manager/MVVM/View/SettingsView.xaml
@@ -200,6 +200,7 @@
                         FontSize="18"
                         Height="30"
                         Width="80"
+                        Cursor="Hand"
                         Command="{Binding CheckSimConnectConnectionCommand}">
                         <Button.Style>
                             <Style TargetType="Button">
